syntax = "proto3";
package secret.tss.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "secret/tss/v1/types.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/scrtlabs/SecretNetwork/x/tss/types";

// Query defines the gRPC query service
service Query {
  // Params queries module parameters
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/secret/tss/v1/params";
  }

  // KeySet queries a KeySet by ID
  rpc KeySet(QueryKeySetRequest) returns (QueryKeySetResponse) {
    option (google.api.http).get = "/secret/tss/v1/keyset/{id}";
  }

  // AllKeySets queries all KeySets
  rpc AllKeySets(QueryAllKeySetsRequest) returns (QueryAllKeySetsResponse) {
    option (google.api.http).get = "/secret/tss/v1/keysets";
  }

  // DKGSession queries a DKG session by ID
  rpc DKGSession(QueryDKGSessionRequest) returns (QueryDKGSessionResponse) {
    option (google.api.http).get = "/secret/tss/v1/dkg/{session_id}";
  }

  // AllDKGSessions queries all DKG sessions
  rpc AllDKGSessions(QueryAllDKGSessionsRequest) returns (QueryAllDKGSessionsResponse) {
    option (google.api.http).get = "/secret/tss/v1/dkg";
  }

  // SigningRequest queries a signing request by ID
  rpc SigningRequest(QuerySigningRequestRequest) returns (QuerySigningRequestResponse) {
    option (google.api.http).get = "/secret/tss/v1/signing/{request_id}";
  }

  // AllSigningRequests queries all signing requests
  rpc AllSigningRequests(QueryAllSigningRequestsRequest) returns (QueryAllSigningRequestsResponse) {
    option (google.api.http).get = "/secret/tss/v1/signing";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method
message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryKeySetRequest is the request type for the Query/KeySet RPC method
message QueryKeySetRequest {
  string id = 1;
}

// QueryKeySetResponse is the response type for the Query/KeySet RPC method
message QueryKeySetResponse {
  KeySet key_set = 1 [(gogoproto.nullable) = false];
}

// QueryAllKeySetsRequest is the request type for the Query/AllKeySets RPC method
message QueryAllKeySetsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllKeySetsResponse is the response type for the Query/AllKeySets RPC method
message QueryAllKeySetsResponse {
  repeated KeySet key_sets = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryDKGSessionRequest is the request type for the Query/DKGSession RPC method
message QueryDKGSessionRequest {
  string session_id = 1;
}

// QueryDKGSessionResponse is the response type for the Query/DKGSession RPC method
message QueryDKGSessionResponse {
  DKGSession session = 1 [(gogoproto.nullable) = false];
}

// QueryAllDKGSessionsRequest is the request type for the Query/AllDKGSessions RPC method
message QueryAllDKGSessionsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllDKGSessionsResponse is the response type for the Query/AllDKGSessions RPC method
message QueryAllDKGSessionsResponse {
  repeated DKGSession sessions = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QuerySigningRequestRequest is the request type for the Query/SigningRequest RPC method
message QuerySigningRequestRequest {
  string request_id = 1;
}

// QuerySigningRequestResponse is the response type for the Query/SigningRequest RPC method
message QuerySigningRequestResponse {
  SigningRequest request = 1 [(gogoproto.nullable) = false];
}

// QueryAllSigningRequestsRequest is the request type for the Query/AllSigningRequests RPC method
message QueryAllSigningRequestsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllSigningRequestsResponse is the response type for the Query/AllSigningRequests RPC method
message QueryAllSigningRequestsResponse {
  repeated SigningRequest requests = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
